Fix dark mode colors

--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -439,6 +439,7 @@
         align-items: center;
         max-width: 100rem;
         margin: 0 auto 1.5rem;
+        color: var(--autocomplete-color);
 
         &__label {
             display: block;
