--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -77,6 +77,7 @@
         width: 100%;
         padding: 0.5rem 1rem;
         font: inherit;
+        color: var(--input-color);
         background-color: var(--input-background-color);
         border: 1px solid var(--input-border-color);
         cursor: pointer;
